@@ -105,6 +105,19 @@ class TestABC(unittest.TestCase):
             pass
         self.assertRaises(AttributeError, getattr, meta, "__abstractmethods__")
 
+    def test_metaclass_abc(self):
+        # Metaclasses can be ABCs, too.
+        class A(metaclass=abc.ABCMeta):
+            @abc.abstractmethod
+            def x(self):
+                pass
+        self.assertEqual(A.__abstractmethods__, {"x"})
+        class meta(type, A):
+            def x(self):
+                return 1
+        class C(metaclass=meta):
+            pass
+
     def test_registration_basics(self):
         class A(metaclass=abc.ABCMeta):
             pass
